refactoring produces same amount of errors; now going to clean up errors + test effect